--- a/ansible/ansible/plays/server.yml
+++ b/ansible/ansible/plays/server.yml
@@ -7,3 +7,8 @@
     - role: software/docker
     - role: software/consul
     - role: software/nomad
+    - role: software/node_exporter
+    - role: software/grafana
+    - role: software/alertmanager
+    - role: software/cadvisor
+
