--- a/ansible/ansible/roles/software/docker/tasks/main.yml
+++ b/ansible/ansible/roles/software/docker/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
 - name: add repo
-  command: yum-config-manager --add-repo=https://rpm.releases.hashicorp.com/RHEL/hashicorp.repo
+  command: yum-config-manager --add-repo=https://download.docker.com/linux/centos/docker-ce.repo
 
 - name: install docker-ce
   yum:
