--- a/ansible/ansible/plays/client.yml
+++ b/ansible/ansible/plays/client.yml
@@ -8,3 +8,6 @@
     - role: software/consul
     - role: software/nomad
     - role: software/node_exporter
+    - role: software/grafana
+    - role: software/alertmanager
+    - role: software/cadvisor
