--- a/ansible/ansible/roles/software/consul/tasks/main.yml
+++ b/ansible/ansible/roles/software/consul/tasks/main.yml
@@ -1,18 +1,21 @@
 ---
+- name: add repo
+  command: yum-config-manager --add-repo=https://rpm.releases.hashicorp.com/RHEL/hashicorp.repo
+
 - name: install consul
   yum:
     name: consul
     state: installed
-
+  
 - name: add consul script
   template:
     src: consul.sh.j2
     dest: /etc/consul.d/consul.hcl
     owner: "consul"
     group: "consul"
-    mode: 0744
-
-- name: enable service consul
+    mode: u=rwx,g=r,o=r
+  
+- name: Enable service consul
   service:
     name: consul
     enabled: yes
