--- a/ansible/ansible/roles/software/nomad/tasks/main.yml
+++ b/ansible/ansible/roles/software/nomad/tasks/main.yml
@@ -1,4 +1,7 @@
 ---
+- name: add repo
+  command: yum-config-manager --add-repo=https://rpm.releases.hashicorp.com/RHEL/hashicorp.repo
+  
 - name: install nomad
   yum:
     name: nomad
